# ocigeniworkshop

./: .aider.chat.history.md  .aider.input.history  .example.env  .gitignore  .sandbox-play.json.swp  AISandboxEnvCheck.py  README.md  README.txt  pyproject.toml  pyrightconfig.json  requirements.txt  sandbox-inno.json  sandbox-play.json  sandbox.json  sandbox.yaml  todo.txt  validate_urls.sh
.aider.tags.cache.v4/: cache.db
.clinerules/: workshop.md
apis/: workshop_apis.py
database/: customer_age_histogram.html  llm_semantic_cache.py  nl2sql_demo.py  rag.sql  readme_database.md  selectai.sql  selectai_demo.ipynb  selectai_demo.py  selectai_workshopadmin.sql  semantic_cache.ipynb  sqlcl.md
function_calling/: classification.ipynb  cohere_langchain_functioncall.py  llama_tool_example.py  llm_classification.py  llm_semantic_cache.py  multi_step_demo.py  multi_step_demo_streaming.py  multistep_tool.ipynb  readme_function.md  semantic_cache.ipynb  single_step_demo.py  single_step_demo_streaming.py  singlestep_tool.ipynb
function_calling /: classification.ipynb  llama_tool_example.py  llm_classification.py  llm_semantic_cache.py  multi_step_demo.py  multi_step_demo_streaming.py  multistep_tool.ipynb  readme_function.md  readme_function.txt  semantic_cache.ipynb  single_step_demo.py  single_step_demo_streaming.py  singlestep_tool.ipynb
langChain/: oci_openai_helper.py  todo
llm/: cohere_chat.py  cohere_chat_history.py  cohere_chat_stream.py  cohere_output_schema.py  llama_chat.py  llama_chat_history.py  llama_chat_stream.py  llama_output_schema.py  llm.ipynb  (+8 more)
(+166 files in other folders)
