[project]
name = "workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.31",
    "langchain-oci>=0.1.5",
    "langchain-openai>=0.3.35",
    "langfuse>=3.9.0",
    "langgraph>=1.0.1",
    "oci>=2.150.2",
    "oracledb>=3.4.0",
    "pypdf>=6.1.3",
]
