[project]
name = "workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.11",
    "envyaml>=1.10.211231",
    "langchain>=1.0.3",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langfuse>=3.9.1",
    "oci>=2.150.2",
    "oci-openai>=0.2.1",
    "oracledb>=3.4.0",
    "pypdf>=6.1.3",
    "uvicorn>=0.38.0",
]
